infra/k8s/ingress-svc.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: rfo.dev
      http:
        paths:
          - path: /api/products/?(.*)
            backend:
              serviceName: product-srv
              servicePort: 5400
          - path: /api/auth/?(.*)
            backend:
              serviceName: auth-srv
              servicePort: 5401
          - path: /api/admin
            backend:
              serviceName: admin-srv
              servicePort: 5402
